--- a/app/page.module.css
+++ b/app/page.module.css
@@ -126,6 +126,7 @@ a.secondary {
   width: 50px;
   height: 30px;
   background-color: cornflowerblue;
+  color: aliceblue;
   border: 1px solid white;
   font-size: 1.5rem;
 }
